# polkavm

./: BENCHMARKS.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
crates/polkavm/: Cargo.toml
crates/polkavm-assembler/: Cargo.toml
crates/polkavm-assembler/src/: amd64.rs  assembler.rs  lib.rs  misc.rs
crates/polkavm-common/: Cargo.toml  README.md
crates/polkavm-common/src/: abi.rs  assembler.rs  blake3.rs  cast.rs  elf.rs  error.rs  hasher.rs  init.rs  lib.rs  operation.rs  program.rs  regmap.rs  utils.rs  varint.rs  writer.rs  zygote.rs
crates/polkavm-derive/: Cargo.toml
crates/polkavm-derive-impl/: Cargo.toml
crates/polkavm-derive-impl-macro/: Cargo.toml  README.md
crates/polkavm-derive-impl-macro/src/: lib.rs
crates/polkavm-derive-impl/src/: abi_support.rs  common.rs  define_abi.rs  export.rs  import.rs  lib.rs
crates/polkavm-derive-impl/src/abi_support_impl/: common_private.rs  common_private_extra_registers.rs  common_public.rs  riscv32.rs  riscv64.rs
crates/polkavm-derive/src/: blake3.rs  common.rs  export.rs  import.rs  lib.rs
crates/polkavm-disassembler/: Cargo.toml
crates/polkavm-disassembler/src/: lib.rs
crates/polkavm-linker/: Cargo.toml
crates/polkavm-linker/proptest-regressions/: riscv.txt
crates/polkavm-linker/src/: dwarf.rs  elf.rs  fast_range_map.rs  lib.rs  program_from_elf.rs  reader_wrapper.rs  riscv.rs  utils.rs
crates/polkavm-linux-raw/: Cargo.toml
crates/polkavm-linux-raw/src/: arch_amd64_bindings.rs  arch_amd64_syscall.rs  io_uring.rs  lib.rs  mmap.rs  syscall.rs
crates/polkavm-linux-sandbox/: Cargo.toml
crates/polkavm-linux-sandbox/src/: lib.rs  polkavm-zygote
crates/polkavm-zygote/: Cargo.toml  build-and-replace-debug.sh  build-and-replace.sh  build.rs  rust-toolchain.toml
crates/polkavm-zygote/.cargo/: config.toml
crates/polkavm-zygote/src/: global_asm.s  main.rs
crates/polkavm/src/: api.rs  bit_mask.rs  caller.rs  compiler.rs  compiler_dummy.rs  config.rs  disassembler.rs  error.rs  gas.rs  generic_allocator.rs  interpreter.rs  lib.rs  linker.rs  module_cache.rs  mutex_no_std.rs  mutex_std.rs  page_set.rs  sandbox.rs  sandbox_linux.rs  shm_allocator.rs  source_cache.rs  tests.rs  tests_riscv.rs  tracer.rs  utils.rs
crates/polkavm/src/compiler/: amd64.rs
crates/polkavm/src/sandbox/: generic.rs  linux.rs  polkavm-zygote
crates/polkavm/tests/: integration_tests.rs
examples/doom/: Cargo.toml  README.md
examples/doom/roms/: doom.polkavm  relink.sh
examples/doom/src/: keys.rs  main.rs  vm.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_generic_allocator.rs  fuzz_interpreter.rs  fuzz_shm_allocator.rs
guest-programs/: Cargo.toml  bench-common.rs  build-all.sh  build-benchmarks-without-inlining.sh  build-benchmarks.sh  build-examples.sh  build-test-data.sh  rust-toolchain.toml
guest-programs/.cargo/: config.toml
guest-programs/bench-minimal/: Cargo.toml
guest-programs/bench-minimal/src/: main.rs
guest-programs/bench-pinky/: Cargo.toml
guest-programs/bench-pinky/src/: main.rs
guest-programs/bench-prime-sieve/: Cargo.toml  README.md
guest-programs/bench-prime-sieve/helper-macros/src/: lib.rs
guest-programs/bench-prime-sieve/src/: main.rs  unrolled.rs  unrolled_extreme.rs
guest-programs/example-hello-world/: Cargo.toml
guest-programs/example-hello-world/src/: main.rs
guest-programs/jam-service-fib/: Cargo.toml  blob.pvm  jam_service.pvm
guest-programs/jam-service-fib/src/: main.rs
guest-programs/output/: example-hello-world.polkavm
guest-programs/riscv-tests/: .gitignore  build.rb  riscv_test.h
guest-programs/riscv-tests/output/rv32ua/: amoadd_w.elf  amoand_w.elf  amomax_w.elf  amomaxu_w.elf  amomin_w.elf  amominu_w.elf  amoor_w.elf  amoswap_w.elf  amoxor_w.elf  lrsc.elf
guest-programs/riscv-tests/output/rv32uc/: rvc.elf
guest-programs/riscv-tests/output/rv32ui/: add.elf  addi.elf  and.elf  andi.elf  auipc.elf  beq.elf  bge.elf  bgeu.elf  blt.elf  bltu.elf  bne.elf  fence_i.elf  jal.elf  jalr.elf  lb.elf  lbu.elf  lh.elf  lhu.elf  lui.elf  lw.elf  ma_data.elf  or.elf  ori.elf  sb.elf  sh.elf  simple.elf  sll.elf  slli.elf  slt.elf  slti.elf  sltiu.elf  sltu.elf  sra.elf  srai.elf  srl.elf  srli.elf  sub.elf  sw.elf  xor.elf  xori.elf
guest-programs/riscv-tests/output/rv32um/: div.elf  divu.elf  mul.elf  mulh.elf  mulhsu.elf  mulhu.elf  rem.elf  remu.elf
guest-programs/riscv-tests/output/rv32uzbb/: zext_h.elf
guest-programs/riscv-tests/output/rv64ua/: amoadd_d.elf  amoadd_w.elf  amoand_d.elf  amoand_w.elf  amomax_d.elf  amomax_w.elf  amomaxu_d.elf  amomaxu_w.elf  amomin_d.elf  amomin_w.elf  amominu_d.elf  amominu_w.elf  amoor_d.elf  amoor_w.elf  amoswap_d.elf  amoswap_w.elf  amoxor_d.elf  amoxor_w.elf  lrsc.elf
guest-programs/riscv-tests/output/rv64uc/: rvc.elf
guest-programs/riscv-tests/output/rv64ui/: add.elf  addi.elf  addiw.elf  addw.elf  and.elf  andi.elf  auipc.elf  beq.elf  bge.elf  bgeu.elf  blt.elf  bltu.elf  bne.elf  fence_i.elf  jal.elf  jalr.elf  lb.elf  lbu.elf  ld.elf  lh.elf  lhu.elf  lui.elf  lw.elf  lwu.elf  ma_data.elf  or.elf  ori.elf  sb.elf  sd.elf  sh.elf  simple.elf  sll.elf  slli.elf  slliw.elf  sllw.elf  slt.elf  slti.elf  sltiu.elf  sltu.elf  sra.elf  (+12 more)
guest-programs/riscv-tests/output/rv64um/: div.elf  divu.elf  divuw.elf  divw.elf  mul.elf  mulh.elf  mulhsu.elf  (+6 more)
guest-programs/riscv-tests/tests/: README
guest-programs/test-blob/: Cargo.toml
guest-programs/test-blob/src/: main.rs
services/accounts/: Cargo.toml
services/admin/: Cargo.toml  README.md
services/staking/: Cargo.toml
services/staking/src/: main.rs
tools/benchtool/: .gitignore  01-build-benchmarks.sh  02-run-benchmarks.rb  03-analyze-benchmarks.rb  Cargo.toml
tools/benchtool/src/: backend.rs  main.rs  utils.rs
tools/benchtool/wazero/: .gitignore  build.sh  go.mod  go.sum  main.go
tools/polkatool/: Cargo.toml
tools/polkatool/src/: main.rs
tools/spectool/: Cargo.toml
tools/spectool/spec/: .gitignore  pyproject.toml  schema.asn  schema.json  validate-asn-schema.py  validate-asn-schema.sh  validate-json-schema.sh
tools/spectool/src/: main.rs
(+260 files in other folders)
