[workspace]
resolver = "2"
members = [
    "crates/polkavm-derive",
    "crates/polkavm-linker",
    "crates/polkavm-assembler",
    "crates/polkavm-common",
    "crates/polkavm-linux-raw",
    "crates/polkavm",

    "tools/polkatool",
    "tools/polkavm-linux-raw-generate",

    "examples/hosts/hello-world",
]

[workspace.package]
version = "0.2.0"
authors = ["Jan Bujak <jan@parity.io>", "Parity Technologies <admin@parity.io>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
repository = "https://github.com/koute/polkavm"

[workspace.dependencies]
polkavm                 = { version = "0.2.0", path = "crates/polkavm" }
polkavm-assembler       = { version = "0.2.0", path = "crates/polkavm-assembler" }
polkavm-common          = { version = "0.2.0", path = "crates/polkavm-common" }
polkavm-derive          = { version = "0.2.0", path = "crates/polkavm-derive" }
polkavm-derive-impl     = { version = "0.2.0", path = "crates/polkavm-derive-impl" }
polkavm-linker          = { version = "0.2.0", path = "crates/polkavm-linker" }
polkavm-linux-raw       = { version = "0.2.0", path = "crates/polkavm-linux-raw" }

clap = "4.4.1"
env_logger = { version = "0.10.0", default-features = false }
gimli = { version = "0.28.0", default-features = false }
hashbrown = { version = "0.14.0", default-features = false }
iced-x86 = "1.19.0"
log = "0.4.20"
object = { version = "0.32.0", default-features = false }
proc-macro2 = "1.0.63"
proptest = "1.2.0"
quote = "1.0.29"
rustc-demangle = "0.1.23"
syn = "2.0.25"
