[workspace]
resolver = "2"
members = [
    "crates/polkavm-derive",
    "crates/polkavm-linker",
    "crates/polkavm-assembler",
    "crates/polkavm-common",
    "crates/polkavm-linux-raw",
    "crates/polkavm",

    "crates/simplealloc",

    "tools/benchtool",
    "tools/polkatool",
    "tools/polkavm-linux-raw-generate",

    "examples/doom",
    "examples/hello-world",
]

[workspace.package]
version = "0.3.0"
authors = ["Jan Bujak <jan@parity.io>", "Parity Technologies <admin@parity.io>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
repository = "https://github.com/koute/polkavm"

[workspace.dependencies]
polkavm                 = { version = "0.3.0", path = "crates/polkavm" }
polkavm-assembler       = { version = "0.3.0", path = "crates/polkavm-assembler" }
polkavm-common          = { version = "0.3.0", path = "crates/polkavm-common" }
polkavm-derive          = { version = "0.3.0", path = "crates/polkavm-derive" }
polkavm-derive-impl     = { version = "0.3.0", path = "crates/polkavm-derive-impl" }
polkavm-linker          = { version = "0.3.0", path = "crates/polkavm-linker" }
polkavm-linux-raw       = { version = "0.3.0", path = "crates/polkavm-linux-raw" }

clap = "4.4.6"
env_logger = { version = "0.10.0", default-features = false }
gimli = { version = "0.28.0", default-features = false }
hashbrown = { version = "0.14.1", default-features = false }
iced-x86 = "1.20.0"
image = { version = "0.24.7", default-features = false }
libc = "0.2.149"
log = "0.4.20"
object = { version = "0.32.1", default-features = false }
proc-macro2 = "1.0.69"
proptest = "1.3.1"
quote = "1.0.33"
rustc-demangle = "0.1.23"
ruzstd = "0.4.0"
syn = "2.0.25"

[profile.dev.package]
hashbrown = { opt-level = 3 }
gimli = { opt-level = 3 }
image = { opt-level = 3 }
ruzstd = { opt-level = 3 }

# To speed up the tests.
polkavm-assembler = { opt-level = 3 }

[profile.benchmark]
inherits = "release"
lto = true
codegen-units = 1
debug = true
