[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1
debug = true

[profile.no-lto]
inherits = "release"
lto = false

[workspace]
resolver = "2"
members = [
    # Examples:
    "example-hello-world",

    # Benchmarks:
    "bench-minimal",
    "bench-pinky",
    "bench-prime-sieve",

    # Tests
    "test-blob",
]

[workspace.lints.rust]
unexpected-cfgs = "allow"
static_mut_refs = "allow"
