[package]
name = "polkavm-common"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "The common crate for PolkaVM"

[dependencies]
log = { workspace = true, optional = true }
polkavm-assembler = { workspace = true, optional = true }

[features]
default = []
alloc = []
std = ["alloc"]
logging = ["dep:log"]
regmap = ["dep:polkavm-assembler"]

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
