[package]
name = "polkavm-derive-impl"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation = "https://docs.rs/polkavm-derive-impl"
description = "The derive crate for PolkaVM guest programs (implementation)"

[dependencies]
polkavm-common = { workspace = true, features = ["alloc"] }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[lints]
workspace = true
