[package]
name = "polkavm-derive"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation = "https://docs.rs/polkavm-derive"
description = "The derive crate for PolkaVM guest programs"

[lib]
proc-macro = true

[dependencies]
polkavm-common = { workspace = true, features = ["alloc"] }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
