[package]
name = "polkavm-derive"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation = "https://docs.rs/polkavm-derive"
description = "The derive crate for PolkaVM guest programs"

[dependencies]
polkavm-derive-impl-macro = { workspace = true }

[lints]
workspace = true
