[package]
name = "polkavm-disassembler"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Disassembler for PolkaVM"

[dependencies]
clap = { workspace = true, features = ["derive"] }
iced-x86 = { workspace = true, features = ["code_asm"] }

polkavm-common = { workspace = true }
polkavm-linker = { workspace = true }
polkavm = { workspace = true }

[dev-dependencies]
ruzstd = { workspace = true, features = ["std"] }

[lints]
workspace = true
