[package]
name = "polkavm-linker"
version = "0.8.2"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation = "https://docs.rs/polkavm-linker"
description = "PolkaVM offline linker"

[dependencies]
log = { workspace = true }
object = { workspace = true, features = ["std", "read_core", "elf", "unaligned"] }
gimli = { workspace = true, features = ["std", "read", "endian-reader"] }
polkavm-common = { workspace = true, features = ["alloc"] }
rustc-demangle = { workspace = true }
hashbrown = { workspace = true, features = ["raw"] }
regalloc2 = "0.9.3"

[lints]
workspace = true
