[package]
name = "polkavm-linker"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation = "https://docs.rs/polkavm-linker"
description = "PolkaVM offline linker"

[dependencies]
log = { workspace = true }
object = { workspace = true, features = ["std", "read_core", "elf", "unaligned"] }
gimli = { workspace = true, features = ["std", "read", "endian-reader"] }
polkavm-common = { workspace = true, features = ["alloc"] }
rustc-demangle = { workspace = true }
hashbrown = { workspace = true, features = ["raw"] }
regalloc2 = "0.9.3"

[dev-dependencies]
diff = { workspace = true }
env_logger = { workspace = true }
polkavm = { workspace = true }
polkavm-disassembler = { workspace = true }
proptest = { workspace = true }
yansi = { workspace = true }

[lints]
workspace = true
