[package]
name = "doom-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger = { version = "0.10.0", default-features = false }
polkavm = { path = "../../crates/polkavm" }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "76748c530d4ca1fe195d3da57da7610723afb6ac" }

[features]
default = ["sdl2/bundled"]
