[package]
name = "bench-minimal"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "bench_minimal"
path = "src/main.rs"
crate-type = ["cdylib"]

[[bin]]
name = "bench-minimal"
path = "src/main.rs"

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
simplealloc = { path = "../../crates/simplealloc" }

[lints]
workspace = true
