[package]
name = "bench-pinky"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "bench_pinky"
path = "src/main.rs"
crate-type = ["cdylib"]

[[bin]]
name = "bench-pinky"
path = "src/main.rs"

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
simplealloc = { path = "../../crates/simplealloc" }
nes = { git = "https://github.com/koute/pinky.git", rev = "5a9d4ff5f22731191cffd7d6202a1d144aacd740", default-features = false, features = ["softfloat"] }

[lints]
workspace = true
