[package]
name = "jam-service-fib"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "fib"
path = "src/main.rs"
crate-type = ["cdylib"]

[[bin]]
name = "jam-service-fib"
path = "src/main.rs"

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
simplealloc = { path = "../../crates/simplealloc" }
