cargo-features = ["edition2024"]

[package]
name = "staking"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "staking"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
simplealloc = { path = "../../crates/simplealloc" }

