[package]
name = "benchtool"
publish = false
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
criterion = { version = "0.5.1", default-features = false, optional = true }
env_logger = { version = "0.10.0", default-features = false, optional = true }
libc = { version = "0.2.149" }
libloading = { version = "0.8.1", optional = true }
log = { version = "0.4.20" }
object = { version = "0.32.1", default-features = false, features = ["std", "elf"], optional = true }
wasmi = { version = "0.32.2", features = ["no-hash-maps"], optional = true }
polkavm = { path = "../../crates/polkavm" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
ckb-vm = { version = "0.24.11", features = ["asm"], optional = true }
pvf-executor = { git = "https://github.com/paritytech/pvf-executor.git", rev = "d3b2bb77b783bcfaff540c2f9ade99f58a311ac3", optional = true }
wasm3 = { git = "https://github.com/wasm3/wasm3-rs.git", rev = "df74c2a17ed8831595de43db98c406da4633e32a", features = ["build-bindgen"], optional = true }

[target.'cfg(all(target_arch = "x86_64", not(target_os = "windows")))'.dependencies]
solana_rbpf = { version = "0.8.1", optional = true }

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
wasmer = { version = "4.3.2", default-features = false, features = ["std", "singlepass"], optional = true }
wasmtime = { version = "21.0.1", default-features = false, features = ["cranelift", "winch", "runtime"], optional = true }

[features]
default = [
    "native",
    "pvf-executor",
    "solana_rbpf",
    "wasm3",
    "wasmer",
    "wasmi",
    "wasmtime",
    "wazero",

    "criterion",
    "env_logger",
]

criterion = ["dep:criterion"]
env_logger = ["dep:env_logger"]

ckb-vm = ["dep:ckb-vm"]
native = ["dep:libloading"]
pvf-executor = ["dep:pvf-executor"]
solana_rbpf = ["dep:solana_rbpf", "dep:object"]
wasm3 = ["dep:wasm3"]
wasmer = ["dep:wasmer"]
wasmi = ["dep:wasmi"]
wasmtime = ["dep:wasmtime"]
wazero = ["dep:libloading"]

[profile.release]
lto = true
codegen-units = 1
debug = true

[workspace]
resolver = "2"
members = ["."]
